# rants

./: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain
.github/workflows/: rust.yml
examples/: echo.rs
src/: codec.rs  constants.rs  lib.rs  tests.rs  tls_or_tcp_stream.rs  types.rs  util.rs
src/codec/: tests.rs
src/types/: address.rs  error.rs  parser.rs  refs.rs  state.rs  tests.rs  tls.rs
src/types/parser/: test.rs  tests.rs
tests/: authorization_override.rs  blocking.rs  common.rs  echo.rs  native_tls_connection.rs  ping_pong.rs  reconnect.rs  request.rs  rustls_tls_connection.rs  tls_connection.rs  wild_card_subject.rs
tests/certs/: server-key.pem
tests/certs/my/: example.com.crt  example.com.csr  example.com.ext  myCA.key  myCA.pem  myCA.srl
