[package]
name = "rants"
version = "0.4.4"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "An async NATS client library."
repository = "https://github.com/davidMcneil/rants"
keywords = ["client", "nats", "pub-sub", "messaging", "queue"]
categories = ["asynchronous", "api-bindings", "database-implementations", "network-programming", "parser-implementations"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["rust-toolchain", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.1"
futures = "0.3.1"
log = "0.4.8"
nom = "5.0.1"
owning_ref = "0.4.0"
pin-project = "0.4.17"
rand = "0.7.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
tokio = { version = "0.2.1", features = ["dns", "io-util", "macros", "stream", "sync", "rt-core", "time", "tcp"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
uuid = { version = "0.7.4", features = ["v4"] }

# Optional dependencies
native-tls-crate = { version = "0.2.3", optional = true, package = "native-tls" }
rustls = { version = "0.18.1", optional = true }
tokio-native-tls = { version = "0.1.0", optional = true }
tokio-rustls = { version = "0.14.1", optional = true }

[dev-dependencies]
env_logger = "0.6.2"
hostname = "0.2.0"
tokio = { version = "0.2.1", features = ["process"] }

[features]
default = []
native-tls = ["native-tls-crate", "tokio-native-tls", "tls"]
rustls-tls = ["rustls", "tokio-rustls", "tls"]
# A derived feature used to determine if either `native-tls` or `rustls-tls` are enable
tls = []
