[package]
name = "rants"
version = "0.5.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "An async NATS client library."
repository = "https://github.com/davidMcneil/rants"
keywords = ["client", "nats", "pub-sub", "messaging", "queue"]
categories = ["asynchronous", "api-bindings", "database-implementations", "network-programming", "parser-implementations"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["rust-toolchain", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
futures = "*"
log = "*"
nom = "*"
owning_ref = "*"
pin-project = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["io-util", "macros", "sync", "time", "net"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-stream = { version = "*", features = ["sync"] }
uuid = { version = "*", features = ["v4"] }

# Optional dependencies
native-tls-crate = { version = "*", optional = true, package = "native-tls" }
rustls = { version = "*", optional = true }
tokio-native-tls = { version = "*", optional = true }
tokio-rustls = { version = "*", optional = true }

[dev-dependencies]
env_logger = "*"
hostname = "*"
tokio = { version = "*", features = ["process", "rt-multi-thread"] }

[features]
default = []
native-tls = ["native-tls-crate", "tokio-native-tls", "tls"]
rustls-tls = ["rustls", "tokio-rustls", "tls"]
# A derived feature used to determine if either `native-tls` or `rustls-tls` are enable
tls = []
