[package]
name = "rants"
version = "0.6.0"
authors = ["David McNeil <mcneil.david2@gmail.com>"]
description = "An async NATS client library."
repository = "https://github.com/davidMcneil/rants"
keywords = ["client", "nats", "pub-sub", "messaging", "queue"]
categories = ["asynchronous", "api-bindings", "database-implementations", "network-programming", "parser-implementations"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["rust-toolchain", ".vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
futures = "0.3"
log = "0.4"
nom = "7.1"
owning_ref = "0.4"
pin-project = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13", features = ["io-util", "macros", "sync", "time", "net"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "0.8", features = ["v4"] }

# Optional dependencies
native-tls-crate = { version = "0.2", optional = true, package = "native-tls" }
rustls = { version = "0.20", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }

[dev-dependencies]
env_logger = "0.9"
hostname = "0.3"
rustls-pemfile = "0.2"
tokio = { version = "1.13", features = ["process", "rt-multi-thread"] }

[features]
default = []
native-tls = ["native-tls-crate", "tokio-native-tls", "tls"]
rustls-tls = ["rustls", "tokio-rustls", "tls"]
# A derived feature used to determine if either `native-tls` or `rustls-tls` are enable
tls = []
